# server/src/main.rs
@@ -20,7 +20,7 @@
 // OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 // SOFTWARE.
 
-//! The REST API server for Portobello
+//! The REST API server for Prelude
 
 #[macro_use]
 extern crate rocket;
